        Capitalize "foo!" and "foo."
        Preserve casing of words such as "POE-Component-IRC"
        Catch "Acme::POE::Tree" as one word, and preserve its casing
        Catch "rollin'" as one word when it makes sense
        Catch 'foo-" as one word when it makes sense, and capitalize at
        start of a sentence
        Capitalize quoted words at the start of a line

0.64 2010-12-10 11:09:08

    - Say "X lines of Y" instead of "X of Y" when training with
      hailo(1).

    - Bump README.pod in the distro to 0.59~1

0.63 2010-12-09 09:03:30
    - Mark the failing tests in t/command/shell.t as TODO for now.

0.62 2010-12-06 03:30:07
    - Really fix t/command/shell.t this time. I had the arguments to
      the test function in the wrong order.

0.61 2010-12-03 06:47:22

    - Use Class::Load instead of Class::MOP::load_class and eval'd require()

    - Fix rare test failure in t/command/shell.t

0.60 2010-11-09 01:35:49

    - Match email addresses and don't capitalize them

    - Don't insert additional spaces in some parsing edge-cases

0.59 2010-10-23 21:20:22

    - Word tokenizer: Match combining characters in words on Perl >=5.12

0.58 2010-10-22 03:34:08

    - Forgot to remove "use Text::Unidecode;" from Words.pm after dropping
      that dependency in the previous release.

    - Skip utf8-text.t on Perl <5.12 due to differences in Unicode matching.

0.57 2010-10-21 01:25:09

    - Fix typo in Schema.pm which messed up the type of the token.text
      SQL column (only relevant to non-SQLite DBs)

    - More robust matching of non-word immediately following URIs

0.56 2010-10-18 05:15:10

    - Add Test::Expect and Test::Synopsis to TestRequires

    - Use YAML::XS in utf8-text.t for clarity, and make the test
      optional.

0.55 2010-10-16 17:58:00

    - Scrap the "normal word" matching constraint from the previous release.
      It was failing to match words like "4.1GB", causing an infinite loop.