@@ -31,7 +31,7 @@ MouseX::Getopt            = 0.2601
 ; Moose
 Moose                     = 1.08
 MooseX::StrictConstructor = 0.10
-MooseX::Getopt            = 0.31
+MooseX::Getopt            = 0.37
 
 ; Hailo.pm
 Any::Moose                = 0.13
